# POO_python

./: Desafio_n1.py  README.md  pyproject.toml
APLICANDO ENCAPSULAMENTO EM PYTHON/: Propriedades.py  Propriedades_Exemplo_Pessoas.py  recursos_publicos_e_privados.py
Atributos de class ou de instancias abstratas/: Atributo_de_class_instancias.py  Class_Abstratas.py  Metodos_de_class_estatico.py
Banco de Dados/: clientes.db  clientes.py
Conceito de Herança simples e multipla/: Heranca_multipla.py  Heranca_simples.py
Data_Hora/: datetime.py
Decoradors interados e geradores com python/: 1.1Decorador_com_argumentos.py  Decorador_com_argumentos.py  Decoradores_com_introspeccao.py  Meu_primeiro_decorador.py  tempCodeRunnerFile.py
Decoradors interados e geradores com python/Interadores e gerador/: MeuInterador.py  Meu_gerador.py
Grenciamento de Pacotes]/: Gerenciamento_com_PiPenv
Treinando Os Desafios de Código com POO/: Desafio_1.py  Desafio_2.py
construtore e descostrutores/: costrutore_e_descostrutores.py
manipulando arquivos/: 1_operacao_leitura.py  2_operação_gravando.py  3_os_shutil.py  gravando.txt  leitura.txt
polimorfismo com python/: Polimorfismo.py
