[project]
name = "poo-com-python-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Hisamotokyuichi",email = "hisamoto91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "poo_com_python"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
